--- a/index.html
+++ b/index.html
@@ -4,29 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="./lib/leaflet-measure.css">
     <link rel="stylesheet" href="./lib/MarkerCluster.css">
     <link rel="stylesheet" href="./lib/MarkerCluster.Default.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-
+    <link rel="stylesheet" href="./dist/style.css">
     <title>Leaflet Geoproject</title>
-    <style>
-        #map {
-            width: 100%;
-            height: 700px;
-        }
-    </style>
-
 </head>
 
 <body>
-    <div id="map"></div>
-    <button onclick=fullScreenView()>View in full screen</button>
-    <div class="coordinate"></div>
-    <button class="print-map">Print map</button>
-    <button class="zoom-to-layer">Zoom to layer</button>
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+        <a class="navbar-brand" href="#">Basic Web-GIS</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Upload data</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+
+    <div id="map">
+        <!-- Map coordinate -->
+        <div class="leaflet-control map-coordinate">
+            <div class="coordinate"></div>
+        </div>
+
+        <!-- full browser -->
+        <div class="leaflet-control full-screen" onclick=fullScreenView()>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                class="bi bi-arrows-fullscreen" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M5.828 10.172a.5.5 0 0 0-.707 0l-4.096 4.096V11.5a.5.5 0 0 0-1 0v3.975a.5.5 0 0 0 .5.5H4.5a.5.5 0 0 0 0-1H1.732l4.096-4.096a.5.5 0 0 0 0-.707zm4.344 0a.5.5 0 0 1 .707 0l4.096 4.096V11.5a.5.5 0 1 1 1 0v3.975a.5.5 0 0 1-.5.5H11.5a.5.5 0 0 1 0-1h2.768l-4.096-4.096a.5.5 0 0 1 0-.707zm0-4.344a.5.5 0 0 0 .707 0l4.096-4.096V4.5a.5.5 0 1 0 1 0V.525a.5.5 0 0 0-.5-.5H11.5a.5.5 0 0 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 0 .707zm-4.344 0a.5.5 0 0 1-.707 0L1.025 1.732V4.5a.5.5 0 0 1-1 0V.525a.5.5 0 0 1 .5-.5H4.5a.5.5 0 0 1 0 1H1.732l4.096 4.096a.5.5 0 0 1 0 .707z" />
+            </svg>
+        </div>
+
+        <!-- zoom to layer -->
+        <div class="leaflet-control zoom-to-layer">
+             <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-house-door" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                    d="M7.646 1.146a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5H9.5a.5.5 0 0 1-.5-.5v-4H7v4a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6zM2.5 7.707V14H6v-4a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5v4h3.5V7.707L8 2.207l-5.5 5.5z" />
+                <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
+            </svg>
+        </div>
+    </div>
+
 </body>
 
 </html>
@@ -35,89 +70,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="./lib/leaflet.browser.print.min.js"></script>
 <script src="./lib/leaflet-measure.js"></script>
-<script src="./data/test.js"></script>
 <script src="./lib/leaflet.markercluster.js"></script>
 <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-<script>
-    // map class initialize
-    var map = L.map('map', {
-        center: [-23.5489, -46.6388],
-        zoom: 10,
-        mmeasureControl: true
-    });
-    map.zoomControl.setPosition('topright');
-
-    // adding osm tilelayer
-    var osm = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
-
-    var stad = L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_terrain/{z}/{x}/{y}{r}.{ext}', {
-        minZoom: 0,
-        maxZoom: 18,
-        attribution: '&copy; <a href="https://www.stadiamaps.com/" target="_blank">Stadia Maps</a> &copy; <a href="https://www.stamen.com/" target="_blank">Stamen Design</a> &copy; <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-        ext: 'png'
-    });
-    // adding osm marker
-    var singleMarker = L.marker([-23.5489, -46.6388])
-        .bindPopup('A pretty CSS popup.<br> Easily customizable.')
-        .openPopup();
-
-    //add map scale
-    L.control.scale().addTo(map);
-
-    //Full screen map view
-    var mapId = document.getElementById('map');
-    function fullScreenView() {
-        event.preventDefault();
-        mapId.requestFullscreen();
-    }
-
-    //Map coordinate display
-    map.on('mousemove', function (e) {
-        console.log(e)
-        $('.coordinate').html(`Lat: ${e.latlng.lat} Lng: ${e.latlng.lng}`)
-    })
-
-    // Map print
-    $(`.print-map`).click(function () {
-        window.print();
-    });
-
-    // Leaflet browser print function
-    L.control.browserPrint().addTo(map);
-
-    // Leaflet meadure function
-    L.control.measure().addTo(map);
-
-    // Geojson load
-    var marker = L.markerClusterGroup();
-    var sampa = L.geoJSON(data, {
-        onEachFeature: function (feature, layer) {
-            layer.bindPopup(feature.properties.name);
-        }
-    });
-    sampa.addTo(marker);
-    //marker.addTo(map);
-
-    //Leaflet geocoder
-    L.Control.geocoder().addTo(map);
-
-    // Leaflet layer control
-    var baseMaps = {
-        "OSM": osm,
-        "Stadia": stad
-    }
-
-    var overlayerMaps = {
-        'GeoJSON Markers': marker,
-        'Single Marker': singleMarker,
-    }
-
-    L.control.layers(baseMaps, overlayerMaps).addTo(map);
-
-    // Zoom to layer
-    $('.zoom-to-layer').click(function () {
-        map.setView([-23.5489, -46.6388], 10)
-    })
-</script>
+<script src="./data/test.js"></script>
+<script src="./dist/main.js"></script>
+<script src="./dist/web-GIS.js"></script>
